[package]
name = "faasm-sys"
description = "Rust bindings for Faasm."
authors = ["Mayeul Fournial <mfournial@outlook.com>"]
readme = "README.md"
repository = "https://github.com/mfournial/faasm-sys"

version = "0.0.10" # in sync with Faasm
build = "build.rs"
edition = "2018"
license = "Apache-2.0"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "mfournial/faasm-sys" }

[dependencies]

[build-dependencies]
bindgen = "0.53"
flate2 = "1.0"
reqwest = { version = "0.10", features = ["blocking", "default-tls"], default-features = false }
tar = "0.4"

[package.metadata.docs.rs]

targets = [] # Do not build docs since this is a sys crate
